deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-deploy
  labels:
    app: redditclone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redditclone
  template:
    metadata:
      labels:
        app: redditclone
    spec:
      containers:
        - name: redditclone-cont
          image: trainwithshubham/reddit-clone
          ports:
            - containerPort: 3000
