service.yml
apiVersion: v1
kind: Service
metadata:
  name: reddit-service
  labels:
    app: redditclone
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31000
  selector:
    app: redditclone
